# module_klingon_serial

./: .gitignore  Makefile  README.md  fastapi_serial.py  pr-closed.json  pyproject.toml  pytest.ini  requirements.txt  serial.py  setup.py
.github/workflows/: klingon-serial-unit-tests.yaml  main.yaml  openfaas-docker-build.yaml  openfaas-pre-docker-build-pr.yaml  post-pr-merge.yaml  pre-docker-build-pr.yaml  pre-pr-merge.yaml  release-drafter.yaml
.kube/: config.yaml
docs/: conf.py  index.rst
fission/: klingon_serial_builder.sh
fission/klingon_serial/: app.py  build.sh  requirements.txt
functions/fission/klingon_serial/: app.py
klingon/: generate_serial.py  openai_billing.py  test_builder.py  utils.py
klingon_serial/: __init__.py  generate.py  generate_serial.py  str2bool.py  strtobool.py  utils.py
openfaas/: Dockerfile  Makefile  README.md  build.py  handler.py  requirements.txt  wrapper.py
openfaas/tests/: test_handler.py
tests/: test_klingon_get_serial.py  test_klingon_str2bool.py  test_klingon_strtobool.py  test_klingon_utils.py  test_utils_get_debug.py  test_utils_get_mac_address_and_interface.py
