[tool.poetry]
name = "klingon-serial"
version = "0.1.0"
description = "Get a globally unique serial"
authors = ["David Hooton <klingon_serial+david@hooton.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djh00t/module_klingon_serial"
repository = "https://github.com/djh00t/module_klingon_serial"
keywords = ["serial", "unique", "identifier"]

include = ["LICENSE", "README.md", "VERSION"]

exclude = ["requirements.txt"]

[tool.poetry.dependencies]
python = ">=3.9"
psutil = "*"
str2bool = "*"

[tool.poetry.scripts]
klingon_serial = "klingon_serial:main"

[tool.mypy]
ignore_missing_imports = true

[tool.mypy.tests]
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
